openshift/redmine/redmine-deploymnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  labels:
    app: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      volumes:
      - name: redmine-pvc
        persistentVolumeClaim:
          claimName: redmine-pvc
      containers:
      - name: redmine
        image: >-
          image-registry.openshift-image-registry.svc:5000/tak01/redmine:latest
        ports:
        - name: redmine
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: redmine-pvc
          mountPath: /usr/src/redmine/files
